--- a/Bio_files/Bio.css
+++ b/Bio_files/Bio.css
@@ -160,3 +160,21 @@ div.paragraph {
 li.full-width {
     width: 100;
 }
+/* Carousel base class */
+.carousel {
+	height: 445px;
+}
+/* Declare heights because of positioning of img element */
+.carousel .item {
+	height: 445px;
+	background-color: rgb(202, 202, 190);
+}
+.carousel-inner > .item > img {
+	position: absolute;
+	top: 0;
+	left: 0;
+    /* min-width: 100%; */
+    height:100px;
+	opacity: 0.8;
+}
+
